--- a/submission/configs/training_config.json
+++ b/submission/configs/training_config.json
@@ -4,8 +4,8 @@
     "_comment_for_policy_names" : "for team_policies_mapping, use the same name that defined in multigrid.agents_pool.SubmissionPolicies",
     "team_policies_mapping": {
 
-        "red_0": "heng_policy"
+        "red_0": "your_policy_name",
+        "red_1": "your_policy_name_v2"
         
     }
 }
-
